load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "visitor",
    srcs = [
        "isolation_condition_visitor.go",
        "table_name_visitor.go",
        "util.go",
    ],
    importpath = "github.com/pingcap/tidb/pkg/mctech/visitor",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/mctech",
        "//pkg/parser/ast",
        "//pkg/parser/model",
        "//pkg/parser/opcode",
        "@com_github_pingcap_failpoint//:failpoint",
    ],
)

go_test(
    name = "visitor_test",
    timeout = "short",
    srcs = [
        "isolation_condition_visitor_test.go",
        "main_test.go",
        "table_name_visitor_test.go",
    ],
    flaky = True,
    deps = [
        ":visitor",
        "//pkg/mctech",
        "//pkg/mctech/preps",
        "//pkg/parser",
        "//pkg/parser/format",
        "//pkg/parser/test_driver",
        "@com_github_stretchr_testify//require",
    ],
)
